# true-ledger

./: Cargo.toml
.devcontainer/: devcontainer.json
src/: account.rs  engine.rs  engine.rs.broken  error.rs  lib.rs  posting.rs  transaction.rs  trial_balance.rs  types.rs
tests/: ledger_test.rs
