[package]
name = "true-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10", features = ["serde", "v4"] }
rust_decimal = { version = "1.35", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal_macros = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
